# PokemonDataViz

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yaml
argo_workflow/: pokemon_etl_data_pipeline.yaml
argocd/: pokemon-dataviz.yaml
k8s/: db_creds.yaml  deployment.yaml  ingress.yaml  secret.yaml
pokemon_dv/: app.py  run_server.sh
template/: db_creds_secret.yaml
