[tool.poetry]
name = "pokemondataviz"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.0.0"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.32"
dash-bootstrap-components = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
